fixed relative position bug on auth views on safari

--- a/apps/frontend/assets/scss/_auth.scss
+++ b/apps/frontend/assets/scss/_auth.scss
@@ -1,4 +1,6 @@
 #auth {
+  @apply relative;
+
   .bg-image {
     @apply absolute inset-0 w-full h-full object-cover;
   }
